[package]
name = "kick_server_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_yaml = "0.9.34"
